####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libnet.la

libnet_la_SOURCES = ClientSocket.cpp HostNotFound.cpp InetAddress.cpp InetInterface.cpp InetService.cpp NetworkException.cpp ServerSocket.cpp ServiceNotFound.cpp Socket.cpp Url.cpp InetEndPoint.cpp

sectiondir = $(includedir)/base/net
section_HEADERS = Socket.h InetAddress.h HostNotFound.h NetworkException.h InetInterface.h InetService.h ClientSocket.h ServerSocket.h ServiceNotFound.h Url.h InetEndPoint.h
