####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libsecurity.la

libsecurity_la_SOURCES = MD5Sum.cpp SHA1.cpp Base64.cpp

sectiondir = $(includedir)/base/security
section_HEADERS = MD5Sum.h SHA1.h Base64.h
