####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libsound.la

libsound_la_SOURCES = SoundDevice.cpp SoundInputStream.cpp SoundOutputStream.cpp

sectiondir = $(includedir)/base/sound
section_HEADERS = SoundDevice.h SoundInputStream.h SoundOutputStream.h
