# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libui.la

libui_la_SOURCES = Dialog.cpp \
                   OpenFileDialog.cpp \
                   Menu.cpp \
                   MessageDialog.cpp \
                   Position.cpp \
                   SaveFileDialog.cpp \
                   SelectFolderDialog.cpp \
                   UserInterfaceException.cpp

sectiondir = $(includedir)/base/ui
section_HEADERS = Dialog.h \
                  OpenFileDialog.h \
                  Menu.h \
                  MessageDialog.h \
                  Position.h \
                  SaveFileDialog.h \
                  SelectFolderDialog.h \
                  UserInterfaceException.h
