# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libui.la

libui_la_SOURCES = \
  Bitmap.cpp \
  Button.cpp \
  Color.cpp \
  Dialog.cpp \
  Drawable.cpp \
  GraphicsContext.cpp \
  OpenFileDialog.cpp \
  Label.cpp \
  Menu.cpp \
  MessageDialog.cpp \
  Picture.cpp \
  Pixmap.cpp \
  PopUpWindow.cpp \
  Position.cpp \
  ProgressBar.cpp \
  SaveFileDialog.cpp \
  SelectFolderDialog.cpp \
  Split.cpp \
  UserInterfaceException.cpp \
  Widget.cpp \
  Window.cpp \
  WindowImpl.cpp

sectiondir = $(includedir)/base/ui
section_HEADERS = \
  Bitmap.h \
  Button.h \
  Color.h \
  Dialog.h \
  Drawable.h \
  GraphicsContext.h \
  OpenFileDialog.h \
  Label.h \
  Menu.h \
  MessageDialog.h \
  Picture.h \
  Pixmap.h \
  PopUpWindow.h \
  Position.h \
  ProgressBar.h \
  SaveFileDialog.h \
  SelectFolderDialog.h \
  Split.h \
  UserInterfaceException.h \
  Widget.h \
  Window.h \
  WindowImpl.h
