# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libxml.la

libxml_la_SOURCES = XMLException.cpp XMLNode.cpp XMLParser.cpp XMLProperty.cpp XMLTree.cpp

sectiondir = $(includedir)/base/xml
section_HEADERS = XMLException.h XMLNode.h XMLParser.h XMLProperty.h XMLTree.h
