# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libxml.la

libxml_la_SOURCES = \
  Attribute.cpp \
  CDATASection.cpp \
  CharacterData.cpp \
  Comment.cpp \
  Document.cpp \
  DocumentFragment.cpp \
  DocumentType.cpp \
  DOMImplementation.cpp \
  Element.cpp \
  Entity.cpp \
  EntityReference.cpp \
  Node.cpp \
  Notation.cpp \
  ProcessingInstruction.cpp \
  Stylesheet.cpp \
  Text.cpp \
  Transformer.cpp \
  XMLException.cpp \
  XMLNode.cpp \
  XMLParser.cpp \
  XMLProperty.cpp \
  XMLTree.cpp

sectiondir = $(includedir)/base/xml
section_HEADERS = \
  Attribute.h \
  CDATASection.h \
  CharacterData.h \
  Comment.h \
  Document.h \
  DocumentFragment.h \
  DocumentType.h \
  DOMException.h \
  DOMImplementation.h \
  Element.h \
  Entity.h \
  EntityReference.h \
  NamedNodeMap.h \
  Node.h \
  Notation.h \
  ProcessingInstruction.h \
  SAXException.h \
  SAXParseException.h \
  Stylesheet.h \
  Text.h \
  Transformer.h \
  TransformerException.h \
  XMLException.h \
  XMLNode.h \
  XMLParser.h \
  XMLProperty.h \
  XMLTree.h \
  XPathException.h
