# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libxml.la

libxml_la_SOURCES = \
  Attribute.cpp \
  AttributeDecl.cpp \
  CDATASection.cpp \
  CharacterData.cpp \
  Comment.cpp \
  Declaration.cpp \
  Document.cpp \
  DocumentFragment.cpp \
  DocumentType.cpp \
  DOMImplementation.cpp \
  Element.cpp \
  ElementDecl.cpp \
  Entity.cpp \
  EntityDecl.cpp \
  EntityReference.cpp \
  NamedNodeMap.cpp \
  Node.cpp \
  Notation.cpp \
  ProcessingInstruction.cpp \
  Stylesheet.cpp \
  Text.cpp \
  Transformer.cpp \
  XMLReader.cpp

sectiondir = $(includedir)/base/xml
section_HEADERS = \
  Attribute.h \
  AttributeDecl.h \
  Attributes.h \
  CDATASection.h \
  CharacterData.h \
  Comment.h \
  Declaration.h \
  Document.h \
  DocumentFragment.h \
  DocumentType.h \
  DOMException.h \
  DOMImplementation.h \
  Element.h \
  ElementDecl.h \
  Entity.h \
  EntityDecl.h \
  EntityReference.h \
  NamedNodeMap.h \
  Node.h \
  Notation.h \
  ProcessingInstruction.h \
  SAXException.h \
  SAXNotRecognizedException.h \
  SAXNotSupportedException.h \
  SAXParseException.h \
  Stylesheet.h \
  Text.h \
  Transformer.h \
  TransformerException.h \
  XMLReader.h \
  XPathException.h
