# ***************************************************************************
#    The Base Framework (Test Suite)
#    A framework for developing platform independent applications
#
#    Copyright (C) 2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

DEFS =
AUTOMAKE_OPTIONS = 1.4 foreign nostdinc

LIBS=-lbase

bin_PROGRAMS = opengl pixmap window tutor

opengl_SOURCES = opengl.cpp
pixmap_SOURCES = pixmap.cpp
window_SOURCES = window.cpp
tutor_SOURCES = tutor.cpp

EXTRA_DIST =
