####### kdevelop will overwrite this part!!! (begin)##########
####### kdevelop will overwrite this part!!! (end)############
DEFS =
DEFAULT_INCLUDES =

noinst_LTLIBRARIES = libaio.la

libaio_la_SOURCES = AsynchronousException.cpp AsynchronousIOStream.cpp AsynchronousOperation.cpp AsynchronousReadCompletion.cpp AsynchronousReadContext.cpp AsynchronousReadEventListener.cpp AsynchronousReadOperation.cpp AsynchronousStream.cpp AsynchronousWriteCompletion.cpp AsynchronousWriteContext.cpp AsynchronousWriteEventListener.cpp AsynchronousWriteOperation.cpp

sectiondir = $(includedir)/base/io/async
section_HEADERS = AsynchronousException.h AsynchronousIOStream.h AsynchronousOperation.h AsynchronousReadCompletion.h AsynchronousReadContext.h AsynchronousReadEventListener.h AsynchronousReadOperation.h AsynchronousStream.h AsynchronousWriteCompletion.h AsynchronousWriteContext.h AsynchronousWriteEventListener.h AsynchronousWriteOperation.h
