# ***************************************************************************
#    The Base Framework
#    A framework for developing platform independent applications
#
#    Copyright (C) 2001-2002 by Rene Moeller Fonseca <fonseca@mip.sdu.dk>
#
#    This framework is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
#    For the licensing terms refer to the file 'LICENSE'.
# ***************************************************************************

include $(top_srcdir)/common.am

noinst_LTLIBRARIES = libaio.la

libaio_la_SOURCES = AsynchronousException.cpp AsynchronousIOStream.cpp AsynchronousOperation.cpp AsynchronousReadCompletion.cpp AsynchronousReadContext.cpp AsynchronousReadEventListener.cpp AsynchronousReadOperation.cpp AsynchronousStream.cpp AsynchronousWriteCompletion.cpp AsynchronousWriteContext.cpp AsynchronousWriteEventListener.cpp AsynchronousWriteOperation.cpp

sectiondir = $(includedir)/base/io/async
section_HEADERS = AsynchronousException.h AsynchronousIOStream.h AsynchronousOperation.h AsynchronousReadCompletion.h AsynchronousReadContext.h AsynchronousReadEventListener.h AsynchronousReadOperation.h AsynchronousStream.h AsynchronousWriteCompletion.h AsynchronousWriteContext.h AsynchronousWriteEventListener.h AsynchronousWriteOperation.h
